mapped array to get all element

--- a/src/index.css
+++ b/src/index.css
@@ -17,7 +17,7 @@ main{
 .slider-container{
   width: 600px;
   height: 400px;
-  background: var(--bg-black);
+  background: white;
   margin: 100px auto;
   border: 1px solid blue;
   box-shadow: 2px 5px 5px 0.1px  blue;
