show only city with same id as selected

--- a/src/index.css
+++ b/src/index.css
@@ -18,8 +18,7 @@ main{
   width: 600px;
   height: 400px;
   background: white;
-  margin: 100px auto;
-  border: 1px solid blue;
+  margin: 20px auto;
   box-shadow: 2px 5px 5px 0.1px  blue;
 }
 .city{
@@ -27,5 +26,5 @@ main{
 }
 img{
   max-width: 100%;
-  height: auto;
+  height: 100%;
 }
