--- a/src/index.css
+++ b/src/index.css
@@ -16,15 +16,54 @@ main{
 }
 .slider-container{
   width: 600px;
-  height: 400px;
-  background: white;
+  height: 550px;
   margin: 20px auto;
+  border: 1px solid black;
   box-shadow: 2px 5px 5px 0.1px  blue;
 }
 .city{
-  border: 1px solid black;
+  width: 100%;
+  height: 100%;
+  color: white;
+}
+.city h2{
+  color: white;
+}
+.city-img{
+  height: 70%;
+  position: relative;
+  color: white;
+}
+.prev{
+  position: absolute;
+  left: -40px;
+  top: 50%;
+  font-size: 40px;
+  color: white;
+}
+.next{
+  position: absolute;
+  right: -40px;
+  top: 50%;
+  font-size: 40px;
+  color: white;
 }
 img{
-  max-width: 100%;
+  width: 100%;
   height: 100%;
 }
+.city-btn{
+  font-size: 50px;
+  display: flex;
+  justify-content: space-between;
+  /* background-color: var(--bg-primary); */
+}
+/* img{
+ width: 100%;
+ height: auto;
+}
+.city-info{
+  background-color: var(--bg-primary);
+}
+
+} */
