--- a/src/index.css
+++ b/src/index.css
@@ -57,3 +57,15 @@ img{
   display: flex;
   justify-content: space-between;
 }
+.loader{
+  height: 100vh;
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background-color: black;
+  background-color: rgba(rgb(0, 0, 0), rgb(0, 0, 0), rgb(1, 1, 1), 1);
+  position: absolute;
+  left: 0;
+  top: 0;
+}
