--- a/src/index.css
+++ b/src/index.css
@@ -1,8 +1,6 @@
 :root{
   --bg-black: black;
   --bg-primary: cornflowerblue;
-  
-
   --txt-white: white;
 }
 header{
@@ -59,12 +57,13 @@ img{
 }
 .loader{
   height: 100vh;
-  width: 100%;
+  width: 100vw;
   display: flex;
   justify-content: center;
   align-items: center;
-  background-color: black;
-  background-color: rgba(rgb(0, 0, 0), rgb(0, 0, 0), rgb(1, 1, 1), 1);
+  /* background-color: black; */
+  background-color: rgba(0, 0, 0, 0.5);
+  /* background-color: rgba(rgb(0, 0, 0), rgb(0, 0, 0), rgb(1, 1, 1), 0.2); */
   position: absolute;
   left: 0;
   top: 0;
